# python_projects

client_project_config_driven/: data-sources.yaml  main.py
client_project_config_driven/sample-data/: market_data.csv  market_data_mixed.csv
config_driven_loading/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config_driven_loading/client/: DataIngestionClient.py  data_ingestion_client.py  orchestrator_factory.py
config_driven_loading/client_test/: README.md  data-sources.yaml  db_utils.py  direct_ingestion_test.py  ingestion_utils.py  orders_json_ingestion_test.py  user_profiles_ingestion_test_case.py
config_driven_loading/client_test/sample-data/: json_db_schema.sql  market_data_20_columns.csv  market_data_missing_required.csv  market_data_perfect.csv  orders.json  portfolio_data_validation.csv  user_profiles.json  user_profiles_direct.json
config_driven_loading/config/: data_loader_config.py
config_driven_loading/converter/: data_type_converter.py
config_driven_loading/converters/: data_type_converter.py
config_driven_loading/core/: base_types.py  logging_config.py
config_driven_loading/data_loaders/: base_loader.py  csv_loader.py  json_loader.py
config_driven_loading/models/: data_record.py
config_driven_loading/models/core/: base_types.py  exceptions.py
config_driven_loading/orchestrators/: data_orchestrator.py
config_driven_loading/processors/: data_processor.py
config_driven_loading/test/: data-sources.yaml  test.py
config_driven_loading/test/sample-data/: market_data_boundary.csv  market_data_invalid_types.csv  market_data_null_empty.csv  risk_metrics_validation.csv
config_driven_loading/writers/: database_writer.py  database_writer_db2.py
edith_face_detection/: .gitignore  README.md  requirements.txt
gen_ai_document_qa/langchain/: langchain.ipynb  requirements.txt
redis_distributed_locking/: README.md  redis_locking.py  requirements.txt
web_scraping/: Adv Webscraping.ipynb  Web Scraping.ipynb
(+45 files in other folders)
